--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -22,7 +22,7 @@
         top: 16px;
         width:18px;
         height: 18px;
-        background: url('../assets/images/arrow-down.svg') no-repeat;
+        background: url('../../assets/images/arrow-down.svg') no-repeat;
     }
 }
 
@@ -34,7 +34,7 @@
         top: 16px;
         width:18px;
         height: 18px;
-        background: url('../assets/images/arrow-up.svg') no-repeat;
+        background: url('../../assets/images/arrow-up.svg') no-repeat;
     }
 }
 
@@ -43,9 +43,12 @@
     background-color: #E0E6EE;
     border-radius: 8px;
     margin-top: 96px;
+    display: flex;
+    flex-direction: column;
+    min-height: 560px;
     img {
-        margin-bottom: 16px;
+        margin: 0 auto 16px auto;
         max-width: 100%;
-        max-height: 100;
+        max-height: 100%;
     }
 }
