--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -51,4 +51,24 @@
         max-width: 100%;
         max-height: 100%;
     }
+    &_spinner {
+        margin-top: 17.5%;
+        margin-left: auto;
+        margin-right: auto;
+        height: 50px!important;
+        width: 50px!important;
+        background-size: 50px!important;
+    }
+}
+
+.spinner {
+    background: url('../../assets/images/spinner.svg') no-repeat 50% 50%;
+    width: 23.33px;
+    height: 24px;
+    animation: rotate 1s infinite reverse linear;
+}
+
+@keyframes rotate {
+    from { transform: rotate(0deg) }
+    to { transform: rotate(360deg) }
 }
