--- a/src/containers/moviePlanets/moviePlanets.scss
+++ b/src/containers/moviePlanets/moviePlanets.scss
@@ -1,11 +1,104 @@
 .movie-planets {
     &_table {
-        // @media (max-width: 767px) {
-
-        // }
+        @media (max-width: 767px) {
+            &, thead, tbody, th, td, tr {
+                display: block;
+            }
+            thead tr {
+                position: absolute;
+                top: -9999px;
+                left: -9999px;
+            }
+            tr:nth-of-type(even) { 
+                background: rgba(229, 229, 229, 0.5);
+                width: calc(100% + 32px);
+                padding: 0 15px;
+                margin-left: -16px;
+              }
+            td {
+                border: none;
+                border-bottom: 1px solid #eee;
+                position: relative;
+                padding-left: 50%;
+                text-align: left;
+                width: 100%;
+                padding-left: 50%!important;
+            }
+            td:before {
+                position: absolute;
+                display: block;
+                top: 10px;
+                left: 0px;
+                width: 50%;
+                padding-right: 10px;
+                white-space: nowrap;
+                text-align: left;
+            }
+            td:nth-of-type(1):before { content: "Planet Name"; }
+            td:nth-of-type(2):before { content: "Rotation period"; }
+            td:nth-of-type(3):before { content: "Orbital period"; }
+            td:nth-of-type(4):before { content: "Diameter"; }
+            td:nth-of-type(5):before { content: "Climate"; }
+            td:nth-of-type(6):before { content: "Surface water"; }
+            td:nth-of-type(7):before { content: "Population"; }
+        }
         position: relative;
         width: 100%;
         min-height: 210px;
+        background: #fff;
+        &_sortable {
+            width: calc(100% - 20px)!important;
+            margin-left: 10px;
+            th {
+                position: relative;
+                vertical-align: middle!important;
+                text-align: center;
+                padding: 12px 5px!important;
+                border-bottom: 1px solid #C4C4C4!important;
+                border-top: none!important;
+                &:first-of-type {
+                    color: #00687F;
+                    padding-left:0 !important;
+                    text-align: left;
+                }
+                &:last-of-type {
+                    padding-right: 0px!important;
+                    &:after {
+                        right: 0px;
+                    }
+                }
+            }
+            th:after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 42%;
+                background: url('../../assets//images/sortIcon.svg') no-repeat 100% 50%;
+                display: block;
+                width: 6px;
+                height: 12px;
+            }
+        }
+        tbody{
+             cursor: default;
+        }
+        tr {
+            td:first-of-type {
+                color: #00687F
+            }
+            td {
+                border: none!important;
+                @media (min-width: 768px) {
+                    padding: 12px 15px!important;
+                    &:first-of-type {
+                        padding-left:0 !important;
+                    }
+                }
+                &:last-of-type {
+                    padding-right: 0px!important;
+                }
+            }
+        }
     }
     &_spinner {
         position: absolute;
