--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -4,7 +4,7 @@
         font-family: 'Barlow', sans-serif;
         font-weight: 700;
         font-size: 16px;
-        line-height: 19px;
+        line-height: 49px;
         color: #00687F;
         cursor: pointer;
         margin:0;
@@ -26,14 +26,14 @@
     line-height: 19px;
     color: #00687F;
     cursor: pointer;
-    padding: 14px 15px!important;
+    padding: 0px 15px!important;
     border-radius: 4px;
     box-shadow: 0px 2px 1px rgba(196, 196, 196, 0.2);
     border-color: transparent!important;
     margin-bottom: 15px!important;
     position: relative;
     &:last-of-type {
-        margin-bottom: 0;
+        margin-bottom: 32px!important;
     }
 }
 
@@ -42,7 +42,8 @@
     h5 {
         box-shadow: 0px 4px 12px rgba(224, 230, 238, 0.5);
         margin-bottom: 10px;
-        padding: 14px 15px 10px 14px!important;
+        padding: 0px 15px 0px 15px!important;
+        line-height: 49px;
         width: calc(100% + 30px);
         margin-left:-15px;
         &:after {
@@ -64,6 +65,7 @@
     margin-top: 96px;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     min-height: 560px;
     img {
         margin: 0 auto 16px auto;
@@ -72,6 +74,7 @@
     }
     &_spinner {
         margin-top: 17.5%;
+        margin-bottom: 17.5%;
         margin-left: auto;
         margin-right: auto;
         height: 50px!important;
