--- a/src/containers/newMovie/newMovie.scss
+++ b/src/containers/newMovie/newMovie.scss
@@ -61,6 +61,11 @@
             padding: 7.5px 49px;
             margin-left: auto;
             margin-top: 31px;
+            opacity: 1!important;
+            &:disabled{
+                cursor: not-allowed;
+                pointer-events: all !important;
+            }
         }
     }
 
@@ -125,23 +130,24 @@
         label {
             color: #FF1616;
         }
-        span {
-            display: block;
-            color: #FF1616;
-            font-family: 'Barlow', sans-serif;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 12px;
-            line-height: 14px;
-            border: 1px solid #FF1616;
-            padding: 8px 8px 9px 9px;
-            margin: 1px 0 0 0;
-            box-shadow: 0px 4px 4px rgba(196, 196, 196, 0.5);
-        }
         button {
             background: #E0E6EE;
         }
     }
+}
+
+.error-message {
+    display: block;
+    color: #FF1616;
+    font-family: 'Barlow', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    border: 1px solid #FF1616;
+    padding: 8px 8px 9px 9px;
+    margin: 1px 0 0 0;
+    box-shadow: 0px 4px 4px rgba(196, 196, 196, 0.5);
 }
 
 .copyright {
