--- a/src/containers/newMovie/newMovie.scss
+++ b/src/containers/newMovie/newMovie.scss
@@ -151,6 +151,12 @@
     padding: 8px 8px 9px 9px;
     margin: 1px 0 0 0;
     box-shadow: 0px 4px 4px rgba(196, 196, 196, 0.5);
+    th {
+        padding: 0!important;
+        border: none!important;
+        font-size: inherit;
+        font-family: inherit;
+    }
 }
 
 .copyright {
